syntax = "proto3";

package pvz.v1;

option go_package = "./ServiceApiPb";

import "google/protobuf/timestamp.proto";

service PVZService {
  rpc GetPVZList(GetPVZListRequest) returns (GetPVZListResponse);
}

message PVZ {
  string id = 1;
  google.protobuf.Timestamp registration_date = 2;
  string city = 3;
}

enum ReceptionStatus {
  RECEPTION_STATUS_IN_PROGRESS = 0;
  RECEPTION_STATUS_CLOSED = 1;
}

message GetPVZListRequest {}

message GetPVZListResponse {
  repeated PVZ pvzs = 1;
}